Refactor configuration and remove deprecated files
- Changed config file extension from `.json` to `.jsonc` for better readability.
- Deleted obsolete `config.json.example` and `MinecraftModManager.py` files as they are no longer needed.
- Updated README.md to reflect the new configuration format and installation instructions, including Python version requirement change to 3.9 or newer.